v2.0pro: 添加Agent模式、对话分支管理、.gitignore，清理构建产物
- 新增 AgentService 支持工具调用（文件读写/命令执行/知识库搜索）
- 新增 ConversationEntity/Repository 支持对话分支管理
- 更新 ChatController 支持 Agent 和分支切换
- 新增 .gitignore 排除构建产物和大型媒体文件
- 删除已跟踪的 target/node_modules 缓存等构建产物
- 删除 PixPin 截图文件

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>